--- a/less/styles.less
+++ b/less/styles.less
@@ -3,7 +3,7 @@
 @bandeau : #4b71ad;
 @box-shadow : #203843;
 
-@fiche: #276ebb; 
+@fiche: #276ebb;
 @livre: #ff9734;
 @bibliotheque : #518ea5;
 @sortie: #42b94a;
@@ -26,7 +26,7 @@ main {
 	padding: 0;
 	min-width: 100%;
 	min-height: 100vh;
-	height: 100%;
+	height: auto;
 }
 
 /* en-tête */
@@ -102,6 +102,7 @@ section {
 	height: auto;
 	min-height: 60%;
 	position: relative;
+	padding-bottom: 50px;
 
 	div.menu {
 
@@ -149,7 +150,7 @@ section {
 
 		}
 	}
-	
+
 	.content {
 
 		display: flex;
