view createfiche.html, add bootstrap

--- a/less/styles.less
+++ b/less/styles.less
@@ -227,3 +227,32 @@ section {
 	}
 
 }
+
+form{
+	.form-row{
+		margin-top: 20px;
+		margin-left: 10px;
+		margin-right: 10px;
+	}
+	.btn-submit-creer-pays{
+		padding: 3px 10px 3px 10px;
+		margin-right: 0  !important;
+	}
+	#image[type=file]{
+		margin-left : 50px;
+		
+	}
+	#choix-mise-en-page{
+		
+		input[type=radio]{
+			display:none;
+		}
+		input[type=radio]:checked+label{
+			opacity:1;
+		}
+		label{
+			opacity:0.6;
+		}
+		
+	}
+}
