--- a/less/styles.less
+++ b/less/styles.less
@@ -2,6 +2,7 @@
 @sea : #A1E5F8;
 @bandeau : #4b71ad;
 @box-shadow : #203843;
+@step: 150px;
 
 @form-block : #22a6d5;
 @fiche: #276ebb;
@@ -156,8 +157,29 @@ section {
 				.form-block{
 					background-color: @form-block;
 					padding: 20px;
+					display: inline-block;
 					border-radius: 10px;
 					margin: 50px;
+					position: relative;
+
+					span {
+						border-radius:50%;
+						color: white;
+						padding: 30px;
+						background-color: @form-block;
+						display: inline-block;
+						text-align: center;
+						width: @step;
+						height: @step;
+						vertical-align: middle; 
+						position: absolute;
+						font-family: "Impact";
+						font-size: 2em;
+						font-weight: bold;
+						top: 50%;
+						left: -(@step/4) * 3;
+						margin-top: -(@step/2);
+					}
 
 					label {
 						color: white;
@@ -172,6 +194,21 @@ section {
 
 					input[type="file"]{
 						display:none;
+					}
+
+					label.B1 {
+						text-align: center;
+					}
+
+					img {
+						width: 150px;
+						margin: 0 25px;
+					}
+
+					p {
+						width: 200px;
+						word-wrap: wrap;
+						color: white;
 					}
 				}
 			}
