--- a/less/styles.less
+++ b/less/styles.less
@@ -424,11 +424,11 @@ h2.label {
 
 }
 .inscription{
-	background-color: #ddd;
+	background-color: rgba(200, 200, 200, 0.8);
 	margin: 10px 10% 200px 10%;
 	border-radius: 5px;
 	
-	input[type="text"], textarea {
+	input[type="text"], textarea, input[type="password"] {
 		border-radius: 0;
 		border: solid 1px black;
 		box-shadow: inset -1px 1px 3px rgb(0, 0, 0);
