--- a/less/styles.less
+++ b/less/styles.less
@@ -104,6 +104,7 @@ header {
 					text-decoration: none;
 					display: inline-block;
 					width: 100%;
+                    text-align: center;
 				}
 
 				a:hover {
@@ -297,11 +298,30 @@ section {
             h2.label {
                 background-color: @bandeau;
                 font-size: 1.2em;
-                padding-left: 30px;
+                padding: 10px;
+                padding-right: 15px;
+                padding-left: 40px;
+                margin: 20px 0;
             }
             
             div.block-fiche {
+                margin: 0 auto;
+                overflow-x: scroll;
+                height: auto;
+                padding: 20px;
+                margin-bottom: 20px;
+                box-shadow: inset -2px 2px 10px rgb(0, 0, 0);
+                border-radius: 10px;
                 
+            }
+            
+            div.block-btn {
+                margin: 100px auto;
+                
+                button {
+                    margin: 0 20px;
+                    background-color: @bandeau;
+                }
             }
 
 		}
