fin page 1 et 2

--- a/less/styles.less
+++ b/less/styles.less
@@ -219,7 +219,14 @@ section {
 						width: 200px;
 						word-wrap: wrap;
 						color: white;
+                        text-align: center;
+                        margin: 20px auto;
 					}
+                    
+                    div {
+                        text-align: center;
+                        vertical-align: middle;
+                    }
 				}
 			}
 		}
