--- a/less/styles.less
+++ b/less/styles.less
@@ -300,7 +300,8 @@ section {
             padding: 0;
             
             h2.label {
-                font-size: 1.2em;
+                font-size: 1em;
+                font-weight: bold;
                 padding: 10px;
                 min-width: 200px;
                 width: auto;
