--- a/less/styles.less
+++ b/less/styles.less
@@ -41,7 +41,7 @@ header {
 	
 	position: relative;
     height: 140px;
-	overflow: hidden;
+	overflow: hidden; 
     
     .background {
         position: absolute;
@@ -60,7 +60,7 @@ header {
 
 	.logo {
 		position : relative;
-		top : -50px;
+		top : -10px;
 		left : 30px;
 		width : 150px;
 		display: inline-block;
@@ -83,6 +83,7 @@ header {
 	button {
 		float: right;
 		width: 140px;
+        margin-top: 10px;
 		margin-right: 20px;
 	}
 
