--- a/less/styles.less
+++ b/less/styles.less
@@ -13,7 +13,7 @@
 @bibliotheque : #618ba6;
 @sortie: #42b94a;
 
-/* arrière plan et contexte */
+/* arriï¿½re plan et contexte */
 
 html {
     height: 100%;
@@ -35,7 +35,7 @@ main {
 	height: auto;
 }
 
-/* en-tête */
+/* en-tï¿½te */
 
 header {
 	
