--- a/less/stylesFiche.less
+++ b/less/stylesFiche.less
@@ -18,6 +18,7 @@ div.accueil {
     div.banniere {
         
         padding: 0 20px;
+        margin-bottom: 50px;
         
         div {
             padding: 20px 0;
@@ -49,18 +50,26 @@ div.accueil {
     div.etapes {
         
         background-color: #0091cb;
-        text-align: center;
+        text-align: left;
+        padding: 30px 0;
+        margin: 0;
+        margin-bottom: 50px;
+
         
         span {
             border: solid 3px white;
             border-radius: 50%;
-            margin: auto;
             display: inline-block;
             width: 40px;
             height: 40px;
             text-align: center;
             color: white;
             font-size: 1.2em;
+            vertical-align: top;
+        }
+        
+        div.col-md-4 {
+            padding: 0 30px;
         }
         
         p {
@@ -72,15 +81,29 @@ div.accueil {
             height: auto;
             max-width: @tailleImage;
             max-height: @tailleImage;
+            margin: auto;
+        }
+        
+        .arrow {
+            width: 50px;
         }
         
     }
     
     div.button {
+        text-align: center;
+        display: flex;
+        justify-content: center;
         
-        button {
+        a button{
             background-color: #0091cb;
             color: white;
+            margin: 20px;
+            padding: 5px 10px;
+            font-size: 1.2em;
+            font-family: Arial;
+            border: solid white 1px;
+            border-radius: 8px;
         }
         
     }
